--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
     <title>My Portfolio</title>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
@@ -15,6 +16,7 @@
       <nav>
         <div role="menubar">
           <a href="index.html" role="menuitem">Home</a><br>
+
           <a href="about.html" role="menuitem">About Me</a><br>
           <a href="work.html" role="menuitem">Work Experience</a><br>
           <a href="contact.html" role="menuitem">Contact</a><br>
