--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       <nav>
         <div role="menubar">
           <a href="index.html" role="menuitem">Home</a><br>
-
           <a href="about.html" role="menuitem">About Me</a><br>
           <a href="work.html" role="menuitem">Work Experience</a><br>
           <a href="contact.html" role="menuitem">Contact</a><br>
@@ -33,9 +32,15 @@
         </p>
         <footer class="page-footer">
           <p style="font-size:16px;">Find me on:</p>
-          <img src="img/tiktok.svg" alt="TikTok">
-          <img src="img/facebook.svg" alt="Facebook">
-          <img src="img/instagram.svg" alt="Instagram">
+          <a href="https://www.tiktok.com/@90ttfox" target="_blank">
+            <img src="img/tiktok.svg" alt="TikTok">
+          </a>
+          <a href="https://www.facebook.com/justin.blaylock.14" target="_blank">
+            <img src="img/facebook.svg" alt="Facebook">
+          </a>
+          <a href="https://www.instagram.com/90ttfox/" target="_blank">
+            <img src="img/instagram.svg" alt="Instagram">
+          </a>
         </footer>
     </div>
     <script src="js/tota11y.min.js"></script>
