--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
           </a>
         </footer>
     </div>
+    <script src="js/scripts.js"></script>
     <script src="js/tota11y.min.js"></script>
     </body>
 </html>
